--- a/views/confirm.html
+++ b/views/confirm.html
@@ -2,7 +2,7 @@
 	<% if(err != null) { %>
 		<%= err.message %>
 	<% } else { %>
-		Your account will now been reset, you will receive an email when it is completed.  Do not refresh this page as your one time token has now been deleted.
+		Your account has now been deleted, and can be recreated via 'npm adduser'.
 	<% }%>
 </div>
-<a href="/">Return</a>
+<a href="/"><< Return to Reset Form</a>
