--- a/views/layout.html
+++ b/views/layout.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>NPM User Reset</title>
+    <title>CouchDB _User Reset</title>
     	<link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>  	
   	<div id="container">
 	  	<div id="header">
-			<h1>NPM User Reset</h1>  			
+			<h1>User Reset</h1>  			
 		</div>
 		<div id="content">
     		<%- body %>
