--- a/views/reset.html
+++ b/views/reset.html
@@ -1,5 +1,5 @@
 <div class='messages'>
 	<%- message %>
 </div>
-<a href="/">Return</a>
+<a href="/"><< Return to Reset Form</a>
 <!--  kind of pointless page but here just in case we want more info -->
