--- a/views/home.html
+++ b/views/home.html
@@ -1,9 +1,9 @@
 <p>Please use the form below to request that your account be reset:</p>
 <form method="post" action="/reset">  
-  <p><label for="username">NPM Username:</label><input type="text" name="username" /></p>
-  <p><label for="email">NPM Email:</label><input type="text" name="email" /></p>
+  <p><label for="username">Username:</label><input type="text" name="username" /></p>
+  <p><label for="email">Email:</label><input type="text" name="email" /></p>
   <p>
-  	<button class="button-submit" type="submit" value="Update">Submit</button>  	
+  	<button class="button-submit" type="submit" value="Update">Reset</button>  	
   </p>
 </form>
-<p>If you have forgotten your details, please re-type 'npm adduser' it will tell you your current configured settings (assuming this is the account that you would like reset).</p>
+<p style='font-size: 0.9em; color: grey;'><i>If you have forgotten your details, please re-type 'npm adduser' it will tell you your current configured settings (assuming this is the account that you would like reset).</i></p>
