Better instructions for retrieving user account info

--- a/views/home.html
+++ b/views/home.html
@@ -3,7 +3,10 @@
   <p><label for="username">Username:</label><input type="text" name="username" /></p>
   <p><label for="email">Email:</label><input type="text" name="email" /></p>
   <p>
-  	<button class="button-submit" type="submit" value="Update">Reset</button>  	
+  	<button class="button-submit" type="submit" value="Update">Reset</button>	
   </p>
 </form>
-<p style='font-size: 0.9em; color: grey;'><i>If you have forgotten your details, please re-type 'npm adduser' it will tell you your current configured settings (assuming this is the account that you would like reset).</i></p>
+<p style='font-size: 0.9em; color: grey;'><i>If you have forgotten your
+  account username, you can get it by running
+  <code>npm owner ls [pkg]</code>
+  for a package that you have previously published.</i></p>
